Updates to feeds

--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -8,6 +8,7 @@
   },
   "blog": {
     "name": "Miniblog.Core",
+    "description": "A short description of the blog",
     "owner": "Mads Kristensen",
     "allowHtml": true
   },
