--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -10,7 +10,8 @@
     "name": "Miniblog.Core",
     "description": "A short description of the blog",
     "owner": "Mads Kristensen",
-    "allowHtml": true
+    "allowHtml": true,
+    "postsPerPage":  1
   },
   "Logging": {
     "IncludeScopes": false,
