--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -11,7 +11,8 @@
     "description": "A short description of the blog",
     "owner": "Mads Kristensen",
     "allowHtml": true,
-    "postsPerPage":  2
+    "postsPerPage": 2,
+    "commentsCloseAfterDays": 20
   },
   "Logging": {
     "IncludeScopes": false,
