Only show published posts Fixed #7

--- a/src/Miniblog.Core/appsettings.json
+++ b/src/Miniblog.Core/appsettings.json
@@ -11,7 +11,7 @@
     "description": "A short description of the blog",
     "owner": "Mads Kristensen",
     "postsPerPage": 2,
-    "commentsCloseAfterDays": 20
+    "commentsCloseAfterDays": 9999 // Set this property to 30
   },
   "Logging": {
     "IncludeScopes": false,
