Updated comment in appsettings.json [release]

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -14,7 +14,7 @@
     "description": "A short description of the blog",
     "owner": "Mads Kristensen",
     "postsPerPage": 2,
-    "commentsCloseAfterDays": 9999 // Set this property to 30
+    "commentsCloseAfterDays": 9999 // Set this property to 7 or similar
   },
   "Logging": {
     "IncludeScopes": false,
