Added cache-control immutable support

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,12 +9,15 @@
   "cdn": {
     "url": ""
   },
+  "webOptimizer": {
+    "enableCaching": true
+  },
   "blog": {
     "name": "Miniblog.Core",
     "description": "A short description of the blog",
     "owner": "Mads Kristensen",
     "postsPerPage": 2,
-    "commentsCloseAfterDays": 9999 // Set this property to 7 or similar
+    "commentsCloseAfterDays": 7
   },
   "Logging": {
     "IncludeScopes": false,
