--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@
 *.sln.docstates
 *.pubxml
 launchSettings.json
+src/appsettings.json
+src/appsettings.Development.json
+appsettings.json
+appsettings.Development.json
+
+src/wwwroot/Posts/*
+Posts/*
+wwwroot/Posts/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
