Reset upstream defaults (#127)
* Update .gitignore

* update gitignore

* Update .gitignore

* Update .gitignore

* update gitignore

* base configuration.

* Imported old blog. Added existing blog posts to gitignore.

* Fixed issue with pagination not displaying button to go back past page three.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs. Updated comments, named comments are unnecessary.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs.

* Update .gitignore

* Imported old blog. Added existing blog posts to gitignore.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs. Updated comments, named comments are unnecessary.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs.

* Restore appsettings.json file to upstream and reset defaults on BlogSettings.cs.

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,14 @@
 *.sln.docstates
 *.pubxml
 launchSettings.json
-src/appsettings.json
-src/appsettings.Development.json
-appsettings.json
-appsettings.Development.json
 
+# Uncomment lines below to prevent pushing appsettings to repository
+# src/appsettings.json
+# src/appsettings.Development.json
+# appsettings.json
+# appsettings.Development.json
+
+# Used to prevent blog post files from being pushed to the repository.
 src/wwwroot/Posts/*
 Posts/*
 wwwroot/Posts/*
