Added list view property to blog settings (#130)
* Added PostListView property to BlogSettings.cs and appsettings.json to allow control over the amount of content displayed for each post during browsing. Options are TitlesOnly, TitlesAndExcerpts (default), and FullPosts.

* Increased the default number of posts per page from two to four. The new default view is TitlesAndExcerpts, meaning that only the post title and the excerpt, if provided, for each blog post will be displayed while browsing posts.

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -11,7 +11,8 @@
   },
   "blog": {
     "owner": "Mads Kristensen",
-    "postsPerPage": 2,
+    "postsPerPage": 4,
+    "postListView": "TitlesAndExcerpts",
     "commentsCloseAfterDays": 10
   },
   "cdn": {
