--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -10,10 +10,10 @@
     "enableCaching": true
   },
   "blog": {
+    "commentsCloseAfterDays": 10,
     "owner": "Mads Kristensen",
-    "postsPerPage": 4,
     "postListView": "TitlesAndExcerpts",
-    "commentsCloseAfterDays": 10
+    "postsPerPage": 4
   },
   "cdn": {
     "url": ""
