Fix listview setting's key (#139)

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -12,7 +12,7 @@
   "blog": {
     "commentsCloseAfterDays": 10,
     "owner": "Mads Kristensen",
-    "postListView": "TitlesAndExcerpts",
+    "listView": "TitlesAndExcerpts",
     "postsPerPage": 4
   },
   "cdn": {
