Add setting to display comments (#157)

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -11,6 +11,7 @@
   },
   "blog": {
     "commentsCloseAfterDays": 10,
+    "displayComments": true,
     "owner": "Mads Kristensen",
     "listView": "TitlesAndExcerpts",
     "postsPerPage": 4
