Add setting to force www prefix in address (#184)

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,5 +1,6 @@
 {
   "forcessl": false,
+  "forceWwwPrefix": true,
   "user": {
     "username": "demo",
     // Generate a new password hash with salt here https://onlinehasher.azurewebsites.net/
